# qdrant-hackathon

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
model/interior-panorama/: package-lock.json  package.json  pnpm-lock.yaml
model/interior-panorama/scripts/: dataset.ts
model/interior-panorama/src/: main.ts
qdrant/: .env.example  README.md  pyproject.toml
qdrant/scripts/: example.py  get-categories.py  get-product-details.py  migrate.py  similarity_search.py  vector_search.py
qdrant/src/qdrant/: main.py
qdrant/src/vector_search/: __init__.py
qdrant/src/vector_search/cli/: __init__.py  main.py
qdrant/src/vector_search/core/: __init__.py  embedders.py  qdrant_client.py  search_engine.py
qdrant/src/vector_search/data/: __init__.py  product_loader.py
qdrant/src/vector_search/utils/: __init__.py  config.py  logger.py
www/: .env.example  biome.jsonc  drizzle.config.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
www/app/: globals.css  layout.tsx
www/app/(auth)/: actions.ts  auth.config.ts  auth.ts
www/app/(scene)/: actions.ts  layout.tsx  page.tsx
www/components/: animated-background.tsx  animated-gradient-background.tsx  auth-form.tsx  chat.tsx  community-scenes.tsx  conversation.tsx  data-stream-handler.tsx  data-stream-provider.tsx  footer.tsx  furniture-sheet.tsx  generation-progress.tsx  gradient-background.tsx  hero-pill.tsx  multimodal-input.tsx  nav-menu.tsx  navbar.tsx  noise-background.tsx  personal-scenes.tsx  preferences-popover.tsx  preview-attachment.tsx  prompt-input.tsx  scene-controlls.tsx  scene-header.tsx  scene.tsx  sidebar-history-item.tsx  sidebar-history.tsx  submit-button.tsx  theme-toggle.tsx  unified-scenes.tsx  vector-visualization.tsx  visibility-selector.tsx
www/hooks/: use-auto-resume.ts  use-chat-visibility.ts  use-messages.tsx  use-scene.ts
www/lib/: constants.ts  errors.ts  types.ts  utils.ts
www/scripts/: test-r2-connection.ts
(+45 files in other folders)
