[project]
name = "qdrant"
version = "0.1.0"
description = ""
authors = [
    {name = "Julian S.",email = "julian.schmidt1005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "ikea-api[all] (>=2.4.0,<3.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "selenium (>=4.15.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "tqdm (>=4.64.0,<5.0.0)",
    "qdrant-client (>=1.12.0,<2.0.0)",
    "sentence-transformers (>=3.2.0,<4.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "qdrant", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
